# warp-api-practice

./: Cargo.toml
src/: main.rs
src/api/: index.rs
src/dbs/: mysql.rs
src/graphql/mutation/: mod.rs  mutation_root.rs
src/graphql/query/: query_root.rs
src/models/: user.rs
src/service/: user_service.rs
