[package]
name = "neat-api"
version = "0.1.0"
authors = ["John <john.zhao@scrumcn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3.0", features = ["full"] }
async-graphql = "2.8.4"
async-graphql-warp = "2.8.4"
