[package]
name = "neat-api"
version = "0.1.0"
authors = ["John <john.zhao@scrumcn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
parking_lot = "0.10.0"
# serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3.0", features = ["full"] }
async-graphql = "2.8.4"
async-graphql-warp = "2.8.4"

dotenv = "0.15.0"
lazy_static = "1.4.0"

#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.3"

#BigDecimal支持(可选)
bigdecimal = "0.2"

#rbatis支持
rbatis =  { version = "1.8", default-features = false, features = ["mysql", "postgres"] } 
